--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^5.5.9",
+        "php": ">=5.5.9",
 
         "doctrine/orm": "^2",
         "symfony/dependency-injection": "~2@dev|~3@dev",
